k8s/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelware-keycloak-prod
  namespace: travelware
  labels:
    app: travelware-keycloak-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travelware-keycloak-prod
  template:
    metadata:
      labels:
        app: travelware-keycloak-prod
    spec:
      containers:
        - name: travelware-keycloak-prod
          image: quay.io/keycloak/keycloak:17.0.0
          ports:
            - containerPort: 8443
