k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelware-keycloak-prod
  namespace: travelware
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - id.yannherren.xyz
      secretName: id-yannherren-xyz-tls
  rules:
    - host: id.yannherren.xyz
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: travelware-keycloak-prod
                port:
                  number: 80
